[package]
name = "misanthropic"
description = "An async, ergonomic, client for Anthropic's Messages API"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["anthropic", "messages", "client", "async", "stream"]
categories = [
    "api-bindings",
    "asynchronous",
    "network-programming",
    "text-processing",
    "web-programming::http-client",
]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
# For base64 encoding/decoding, obvs.
base64 = "0.22"
# Because I don't like boilerplate.
derive_more = { version = "1", features = [
    "as_ref",
    "deref",
    "deref_mut",
    "display",
    "from",
    "into",
    "is_variant",
] }
# For the client
eventsource-stream = "0.2"
# We don't depend on tokio. Misanthropic should support anything that `rewqest`
# supports, howevet the Client will not build on wasm32 currently.
futures = "0.3"
# For various traits like `Tool` 
async-trait = "0.1"
# For `image` crate support.
image = { version = "0.25", optional = true }
# For logging
log = { version = "0.4", optional = true }
# For paranoid people who want to encrypt the key in memory. I have no idea how
# secure this is, but it would make malware that searches for keys in memory
# harder to write. This is a mitigation for an already bad situation.
memsecurity = { version = "3.5", optional = true }
# For zeroizing keys in memory.
zeroize = { version = "1", features = ["derive"] }
# rustls because I am sick of getting Dependabot alerts for OpenSSL.
reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "http2",
], default-features = false }
# Because of a strange issue wiht reqwest::Url missing Deserialize
url = { version = "2", features = ["serde"] }
# What else would we use? Ok there are options, but this is a good one.
serde = { version = "1", features = ["derive"] }
# In some places in this crate, we use `serde_json::Value` to represent JSON
# objects.
serde_json = "1"
# I like this for errors.
thiserror = "1"
# markdown support
pulldown-cmark = { version = "0.12", optional = true, features = ["serde"] }
# Html rendering of markdown. `dioxus` feature is better for this, but it is
# available for those who want it.
pulldown-cmark-to-cmark = { version = "19", optional = true }
# To enforce certain guarantees at compile time.
static_assertions = "1"
# For output sanitization. Currently this is not supported for `Block::thought`
# because character escaping could break Anthropic's signature, and the API
# would reject the message when resubmitting. The developer is responsible for
# ensuring the output is sanitized. Or simply hide agent thoughts. Log them
# instead. Users only need see "thinking" unless you really, really want to
# expose customers to the random thoughts of a machine learning model.
# The allow-list below is deliberately broad. langsan 0.0.14+ resolves
# membership through an O(1) two-level table, so cost no longer scales with the
# number of enabled blocks — we can admit everything legitimate model output
# uses. The one rule: **visible glyphs only.** Every block here contains
# printable characters and nothing else. We do NOT enable any block carrying
# invisible / format / spoofing code points — those stay denied so langsan can
# still do its job:
#   - Arabic / Hebrew & RTL — Arabic carries U+061C (invisible bidi mark) and
#     U+0600–0605 format marks; RTL needs the `bidi` feature, intentionally off.
#   - Hangul Jamo / Compatibility Jamo — blank filler chars (U+115F/1160/3164).
#   - Variation Selectors (+Supp), Tags, Specials, Arabic Presentation Forms-B
#     (BOM U+FEFF) — invisible / format.
#   - Combining-mark blocks (Zalgo/overlay), Private Use Areas, Halfwidth and
#     Fullwidth Forms (filler + homoglyph spoofing).
# Independently, zero-width/bidi controls stay denied via langsan's
# `FORBIDDEN_BIDI` list and tag chars because the `tags` block is off, so even
# the enabled blocks can't smuggle the known vectors. See #74.
langsan = { version = "0", features = [
    "serde",
    "verbose",
    # Languages (each pulls the Latin-1 Supplement etc. it needs).
    "english",
    "french",
    "german",
    "italian",
    "russian", # -> cyrillic
    "emoji",   # -> emoticons
    # Latin/phonetic extensions for the rest of the Latin-script languages.
    "latin-extended-a",          # š č ż ğ (Polish, Czech, Turkish…)
    "latin-extended-b",
    "latin-extended-additional", # Vietnamese
    "ipa-extensions",            # phonetic transcription
    # Greek & Cyrillic — math/science variables and Slavic text.
    "greek-and-coptic",    # α β γ π Σ Ω
    "greek-extended",
    "cyrillic-supplement",
    # CJK — Chinese, Japanese, Korean (precomposed; Jamo excluded, see above).
    "cjk-symbols-and-punctuation",        # 。、「」
    "hiragana",
    "katakana",
    "cjk-unified-ideographs",             # the main Han block
    "cjk-unified-ideographs-extension-a",
    "hangul-syllables",                   # 한국어
    "enclosed-cjk-letters-and-months",    # ㊙ ㈱
    "cjk-compatibility",                  # ㎏ ㎞ squared units
    # Punctuation & technical.
    "general-punctuation",           # — “ ” • … (bidi subset stays denied)
    "supplemental-punctuation",
    "miscellaneous-technical",       # ⌘ ⌥ ⏎ ⌫
    "control-pictures",              # ␀ ␉
    "optical-character-recognition",
    # Math.
    "mathematical-operators",               # − ≈ ≤ ≥ ≠ √ ∑ ∞ ∫
    "supplemental-mathematical-operators",
    "miscellaneous-mathematical-symbols-a",
    "miscellaneous-mathematical-symbols-b",
    "mathematical-alphanumeric-symbols",    # 𝔸 𝕏 𝒞 blackboard/script
    "superscripts-and-subscripts",          # x² H₂O
    "letterlike-symbols",                   # ™ № ℃ ℓ ℝ
    "number-forms",                         # ½ ⅓ Ⅷ
    "currency-symbols",                     # € £ ¥ ₹
    # Arrows.
    "arrows",
    "supplemental-arrows-a",
    "supplemental-arrows-b",
    "supplemental-arrows-c",
    # Shapes, boxes, bars — tables, trees, TUI/ASCII art.
    "box-drawing",                  # ─ │ ┌ └
    "block-elements",               # ░ ▒ █
    "geometric-shapes",             # ■ ● ▶ ○
    "geometric-shapes-extended",    # 🔴 🟢 🟡
    "symbols-for-legacy-computing",
    "braille-patterns",             # ⠿ (ASCII art)
    # Symbols, dingbats, emoji/pictographs.
    "miscellaneous-symbols",                 # ★ ☆ ⚠ ☑ ♔ ♪
    "miscellaneous-symbols-and-arrows",
    "dingbats",                              # ✓ ✗ ✔ ✘ ➜
    "ornamental-dingbats",
    "miscellaneous-symbols-and-pictographs", # 🔧 📊 🔥 🚀
    "supplemental-symbols-and-pictographs",  # 🧠 🤖 🦀
    "symbols-and-pictographs-extended-a",    # 🩹 🪐
    "transport-and-map-symbols",             # 🚗 ✈
    "enclosed-alphanumerics",                # ① ② ⓐ
    "enclosed-alphanumeric-supplement",      # 🇺🇳 regional indicators (flags)
    "enclosed-ideographic-supplement",
], optional = true }
# For HTML escaping
xml-rs = { version = "0.8", optional = true }
# For shuttle-runtime support
shuttle-runtime = { version = "0.51", optional = true }
# async/await
async-stream = "0.3"
# for date and time parsing
chrono = { version = "0.4", features = ["serde"] }
# for request ids
uuid = { version = "1", features = ["v4", "serde"] }
# Dioxus support
dioxus = { version = "0.7", optional = true }
# JSON Schema generation for structured outputs and typed tools. Core: tool
# calling is a core feature, so schemars is non-optional.
schemars = { version = "1" }
# Deserializer wrapper that augments serde errors with the path to the failing
# field — used to give the model actionable tool-argument validation errors.
serde_path_to_error = { version = "0.1" }
# Derive macros for the typed-tool layer (`#[derive(ToolArgs)]`, `#[tool]`).
# Gated behind the default-on `derive` feature; emits `::misanthropic::…` paths.
misanthropic-derive = { workspace = true, optional = true }
# Async filesystem for the `memory-fs` backend. The crate core is runtime-
# agnostic; only `FsMemoryBackend` needs a runtime, so tokio stays optional.
tokio = { version = "1", optional = true, features = ["fs"] }
# Ephemeral per-container mTLS for the `bash-container` sandbox: generate a
# throwaway CA + server/client leaves (host-side only — `bashd` just consumes the
# PEMs over stdin). `ring` to match reqwest's rustls backend (no second crypto
# stack on the host); `zeroize` so rcgen wipes its own key material.
rcgen = { version = "0.14", default-features = false, features = [
    "pem",
    "ring",
    "zeroize",
], optional = true }
# The validity window for those ephemeral certs (rcgen's date type is `time`'s).
time = { version = "0.3", default-features = false, features = [
    "std",
], optional = true }

[dev-dependencies]
# clipboard scrub in the examples' shared `api_key()` helper
arboard = "3"
# for all examples
clap = { version = "4", features = ["derive"] }
# for all examples
env_logger = "0.11"
# example-side logging macros (e.g. debugging the chat loop in utils/chat.rs)
log = "0.4"
# The async runtime. `misanthropic` itself is async runtime agnostic. Except
# wasm. Wasm is a special snowflake.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
# for the strawberry example
itertools = "0.13"
# for the python example
subprocess = "0.2"
tempfile = "3.12"
# for the memory example REPL
rustyline = "14"
# Compile-fail (UI) tests for the `derive` proc-macros.
trybuild = "1"
# Variant enumeration for the wire-coverage gate: `EnumDiscriminants` derives a
# `BlockKind` from `Block` and `EnumIter` enumerates it (and `KnownCaller`), so a
# new wire variant is forced to have a captured fixture. Test-only — derives are
# `cfg_attr(test)`-gated, so this stays a dev-dependency.
strum = { version = "0.26", features = ["derive"] }
# Build the examples (and tests/benches) with the crate's own `log` feature on,
# so the client's internal logs surface without an extra `--features log`. This
# self path dev-dependency is dev/test/bench-scoped only: `cargo build` and
# downstream consumers keep `log` opt-in. See the `run-example` just recipe.
misanthropic = { path = ".", features = ["log"] }

[features]
# rustls because I am sick of getting Dependabot alerts for OpenSSL.
default = ["rustls-tls", "langsan", "client", "batch", "derive"]
# Image crate support. Note that images are supported without this feature but
# you must handle encoding/decoding yourself, so it almost always makes sense
# to enable this and use the image crate.
image = ["dep:image"]
# Use the image crate to support JPEG images.
jpeg = ["image", "image/jpeg"]
# Use the image crate to support PNG images.
png = ["image", "image/png"]
# Use the image crate to support GIF images.
gif = ["image", "image/gif"]
# Use the image crate to support WEBP images.
webp = ["image", "image/webp"]
# Enable logging
log = ["dep:log"]
# Use rustls instead of the system SSL, such as OpenSSL.
rustls-tls = ["reqwest/rustls-tls"]
# Use `pulldown-cmark` for markdown parsing and `pulldown-cmark-to-cmark` for
# converting to CommonMark.
markdown = ["pulldown-cmark/serde", "dep:pulldown-cmark-to-cmark"]
# Utilities for converting prompts and messages to HTML. Enables `markdown`.
html = ["markdown", "xml-rs"]
# Derive PartialEq for all structs and enums.
partial-eq = []
# Input and output sanitization
langsan = ["dep:langsan"]
# Encrypted key in memory. Without this the key is still zeroed on drop, but is
# not encrypted. This is a more secure option for the paranoid. Does not build
# on wasm32.
memsecurity = ["dep:memsecurity"]
# Support for parsing chain of thought XML tags.
cot = []
# Support for shuttle-runtime crate.
shuttle = ["dep:shuttle-runtime"]
# Batch support. By default this is on but it breaks wasm, FYI.
batch = ["client"]
# Enable the actual client. This can be off for wasm because eventsource-stream
# requires Sync on some things and that's not possible in wasm.
client = []
# Enables some Dioxus support. This is not necessary for the client.
dioxus = ["dep:dioxus"]
# Notepad tool for the assistant to take notes. Implemented with the typed-tool
# derive macros, so it requires `derive`.
notepad = ["derive"]
# Optional tokio dependency, pulled in by `memory-fs`. A bare feature so other
# tokio-backed pieces can share it later. Includes `rt` for the bash background
# completion-watcher's `tokio::spawn` (the runtime itself comes from the caller).
tokio = ["dep:tokio", "tokio/rt"]
# Typed client-side `memory` tool support: the `Command` vocabulary and the
# `Memory` definition. Runtime-agnostic — bring your own executor, or enable
# `memory-fs` for the filesystem one.
memory = []
# The `FsMemoryBackend` reference executor for the memory tool — async on tokio.
memory-fs = ["memory", "tokio"]
# Typed client-side `text_editor` tool support: the `Command` vocabulary
# (view/create/str_replace/insert) and the `TextEditor` definition. Runtime-
# agnostic — bring your own executor, or enable `text-editor-fs` for the
# filesystem one.
text-editor = []
# The `FsEditorBackend` reference executor for the text editor — async on tokio,
# jailed to a working directory.
text-editor-fs = ["text-editor", "tokio"]
# Typed client-side `bash` tool support: the `Command` vocabulary
# (run/restart/poll/kill), the `Bash` definition, the `bashd` wire protocol, the
# `BashSandbox` trait, and the `BashTool<S>` adapter. Sandbox-agnostic — bring
# your own `BashSandbox` (the shared types the `bashd` daemon also speaks), or
# enable `bash-container` for the Docker/Podman one.
bash = []
# The `DockerSandbox` reference executor for the bash tool — runs `bashd` in a
# Docker/Podman container, reached over an ephemeral per-container mutual-TLS
# channel (always on). Async on tokio (process + io-util); needs a reqwest TLS
# backend (rustls) for the pinned client. Does not build on wasm32.
bash-container = [
    "bash",
    "tokio",
    "tokio/process",
    "tokio/io-util",
    "rustls-tls",
    "dep:rcgen",
    "dep:time",
]
# OpenAI-compatible types and conversions for use with Ollama and other
# OpenAI-compatible endpoints.
openai = []
# Derive macros for typed tools: `#[derive(ToolArgs)]` and `#[tool]`. On by
# default; turn off to drop the proc-macro (syn) compile-time cost.
derive = ["dep:misanthropic-derive"]
# Doc-tests the agent skill files (`.claude/skills/*/SKILL.md` and the per-tool
# resource files they point at) so their code blocks can't drift from the public
# API. Implies the features the skills document: `client` (Client / streaming),
# `derive` (the `#[tool]` macro), and the client-executed file tools `memory-fs`
# (memory + its backend), `text-editor-fs` (text editor + its backend), and
# `bash-container` (the `DockerSandbox` bash executor).
__skills = ["client", "derive", "memory-fs", "text-editor-fs", "bash-container"]

# Integration tests link the lib as an *external* crate, so `cfg(test)` does not
# reach it — the `test`-gated `derive(PartialEq)` on API types (e.g.
# `AllowedCaller`) is absent there. `tool_attr` asserts `AllowedCaller` equality,
# so it needs the `partial-eq` feature (and `derive` for `#[tool]`). Declaring it
# here makes a bare `cargo test` skip it cleanly instead of failing to compile;
# the gate runs `--all-features`, so it still executes there.
[[test]]
name = "tool_attr"
required-features = ["derive", "partial-eq"]

[[example]]
name = "strawberry"
required-features = ["client", "markdown", "derive"]
doc-scrape-examples = true

[[example]]
name = "python"
required-features = ["client", "markdown"]
doc-scrape-examples = true

[[example]]
name = "website_wizard"
required-features = ["client"]
doc-scrape-examples = true

[[example]]
name = "neologism"
required-features = ["client"]
doc-scrape-examples = true

[[example]]
name = "structured_commit_classifier"
required-features = ["client"]
doc-scrape-examples = true

[[example]]
name = "vote_intent"
required-features = ["client"]
doc-scrape-examples = true

[[example]]
name = "few_shot_triage"
required-features = ["client"]
doc-scrape-examples = true

[[example]]
name = "mid_conversation_system"
required-features = ["client"]
doc-scrape-examples = true

[[example]]
name = "web_search"
required-features = ["client"]
doc-scrape-examples = true

[[example]]
name = "memory"
required-features = ["client", "memory-fs"]
doc-scrape-examples = true

[[example]]
name = "text_editor"
required-features = ["client", "text-editor-fs"]
doc-scrape-examples = true

[[example]]
name = "web_fetch"
required-features = ["client"]
doc-scrape-examples = true

[[example]]
name = "programmatic_tool_calling"
required-features = ["client"]
doc-scrape-examples = true

[[example]]
name = "tool_search"
required-features = ["client", "derive"]
doc-scrape-examples = true

[[example]]
name = "interleaved_thinking"
required-features = ["client", "derive"]
doc-scrape-examples = true

[[example]]
name = "bash"
required-features = ["client", "bash-container"]
doc-scrape-examples = true

[[example]]
name = "bash_background"
required-features = ["client", "bash-container", "derive"]
doc-scrape-examples = true

[[example]]
name = "reminder"
required-features = ["client", "derive"]
doc-scrape-examples = true

# See also the `chat` example in the root of the repository.
