[package]
name = "chat-frontend"
version = "0.1.0"
authors = ["Michael de Gans <michael.john.degans@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6", features = ["router"] }
eventsource-stream = "0.2"
reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "http2",
], default-features = false }
misanthropic = { path = "../../misanthropic", default-features = false, features = [
    "log",
    "cot",
    "dioxus",
    "html",
    "notepad",
    "prompt-caching",
] }
uuid = { version = "0.8", features = ["v4"], default-features = false }
getrandom = { version = "0.2", features = ["js"], default-features = false }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-logger = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3" }
thiserror = "1"
js-sys = "0.3"
futures = "0.3"
lazy_static = "1"

# This is the model crate, which is shared between the frontend and backend.
model = { path = "../model" }
dioxus-sdk = { version = "0.6", features = ["storage", "system_theme"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
